fix text align

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -774,6 +774,10 @@ body.logged-in {
 }
 
 .entry-content {
+	p {
+		text-align: justify;
+	}
+	
 	h1,h2,h3,h4,h5,h6 {
 		font-weight: 600;
 		line-height: 1.24;
